# competitive-data-science

./: .gitignore  pyproject.toml
data/: cross-val-balanced.csv  cross-val-stratified.csv
notebooks/: 01-quick-start.ipynb  02-data-analysis.ipynb
submissions/: simple_baseline_v1.csv  simple_baseline_v2.csv
