[tool.poetry]
name = "competitive-data-science"
version = "0.1.0"
description = "Comtetitive Data Science course on Stepik"
authors = ["Vladislav Garist <vv.garist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
notebook = "^7.2.1"
catboost = "^1.2.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
